# DeepResearcher_RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  SKILLS.MD  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
docs/: agent_quality.md
infra/: bootstrap.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf
src/agent_interface/: schemas.py  states.py
src/agents/: guardrail_agent.py  research_agent.py  scope_agent.py  supervisor_agent.py  workflow_executor.py
src/api/: __init__.py  main.py  schemas.py  security.py  streaming.py
src/api/routers/: __init__.py  auth.py  chat.py  history.py
src/config/: model_config.yaml  prompt_templates.yaml
src/data_retriever/: output_retriever.py
src/db/: database.py  models.py
src/db/repositories/: __init__.py  chat_repository.py  user_repository.py
src/exceptions/: __init__.py  agent_exceptions.py
src/frontend/: Dockerfile  package-lock.json  package.json
src/frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
src/frontend/app/components/: AuthModal.tsx  Message.tsx  MessageInput.tsx  Sidebar.tsx  SourceCard.tsx
src/llm/: __init__.py  model_wrapper.py
src/prompt_engineering/: templates.py
src/utils/: tools.py
tests/integration/: conftest.py  test_api.py
tests/quality/: conftest.py  test_effectiveness.py  test_efficiency.py  test_robustness.py  test_trustworthy.py
tests/unit/: test_agents.py
